--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "apexcharts": "^3.50.0",
+    "gh-pages": "^6.1.1",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.3.1",
@@ -28,7 +29,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy" :"gh-pages -d build",
+    "predeploy" :"npm run build"
   },
   "eslintConfig": {
     "extends": [
@@ -50,5 +53,6 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.3.3"
-  }
+  },
+  "homepage": "https://yhwba.github.io/react-code-challenge-01"
 }
